# bioacoustic-species-detection

./: .gitattributes  .gitignore  README.md  pyproject.toml
notebooks/: 00-data_sandbox.ipynb  01-eda.ipynb  01-ida.ipynb  02-build_features.ipynb  03-eda-milos.ipynb  03-eda.ipynb  03-fit_models.ipynb  04-fit_models.ipynb
results/features/: data_train.pkl  data_train_soundscapes.pkl
results/features/collected/: data_train.pkl  data_train_soundscapes.pkl
results/tables/: gs-soundscape_to_soundscape-embeddings.csv  gs-soundscape_to_soundscape-features.csv  lr-soundscape_to_soundscape-class.csv  lr-soundscape_to_soundscape-species_baseline.csv  lr-soundscape_to_soundscape-species_comparison.csv  lr-soundscape_to_soundscape-species_feat_augmentation.csv  lr-soundscape_to_soundscape-species_moe.csv  rf-mix_to_soundscape-class.csv  rf-mix_to_soundscape-species_baseline.csv  rf-mix_to_soundscape-species_comparison.csv  rf-mix_to_soundscape-species_feat_augmentation.csv  rf-mix_to_soundscape-species_moe.csv  rf-soundscape_to_soundscape-class.csv  rf-soundscape_to_soundscape-species_baseline.csv  rf-soundscape_to_soundscape-species_comparison.csv  rf-soundscape_to_soundscape-species_feat_augmentation.csv  rf-soundscape_to_soundscape-species_moe.csv  svm-soundscape_to_soundscape-species_baseline.csv  xgboost-mix_to_soundscape-class.csv  xgboost-mix_to_soundscape-species_baseline.csv  xgboost-mix_to_soundscape-species_feat_augmentation.csv  xgboost-mix_to_soundscape-species_moe.csv  xgboost-soundscape_to_soundscape-species_baseline.csv
scripts/: collect_embeddings.py  collect_features.py
src/bioacoustics/: config.py  data.py  features.py  metrics.py  modeling.py  models.py  preprocessing.py  quality.py  visualization-milos.py  visualization.py
(+3 files in other folders)
